WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12568
WebKit fails mask-intro-01f from the W3c
https://bugs.webkit.org/show_bug.cgi?id=12568
Summary
WebKit fails mask-intro-01f from the W3c
Eric Seidel (no email)
Reported
2007-02-04 03:19:15 PST
WebKit fails mask-intro-01f from the W3c This will need a reduction.
Attachments
partial fix (breaks one other mask test)
(11.05 KB, patch)
2007-06-01 05:21 PDT
,
Eric Seidel (no email)
no flags
Details
Formatted Diff
Diff
fix and updated test cases
(89.80 KB, patch)
2007-06-01 13:57 PDT
,
Eric Seidel (no email)
oliver
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Eric Seidel (no email)
Comment 1
2007-06-01 05:21:28 PDT
Created
attachment 14825
[details]
partial fix (breaks one other mask test)
Eric Seidel (no email)
Comment 2
2007-06-01 05:22:23 PDT
This was simply due to our lack of support of maskUnits and maskContentUnits. The attached patch fixes that (sorta). Unfortunately I regressed one other mask test with this patch, so I'll need to fix that before it can be landed.
Eric Seidel (no email)
Comment 3
2007-06-01 13:57:29 PDT
***
Bug 6409
has been marked as a duplicate of this bug. ***
Eric Seidel (no email)
Comment 4
2007-06-01 13:57:52 PDT
Created
attachment 14831
[details]
fix and updated test cases
Oliver Hunt
Comment 5
2007-06-01 14:19:12 PDT
Comment on
attachment 14831
[details]
fix and updated test cases r=me
Eric Seidel (no email)
Comment 6
2007-06-01 14:24:22 PDT
Landed on the feature-branch as
r21944
. This one is slightly more risky to move to trunk (as it makes it more common to request huge buffers now that we correctly support maskContents). However, I fixed a few exception crashes as a result of the more-common huge-buffer allocation, so this might actually include a p1 fix in it and need to be moved (at least in part) to TOT.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug