WebCore/ksvg2/svg/SVGMaskElement.cpp
@@ -32,6 +32,7 @@
 #include "RenderSVGContainer.h"
 #include "SVGLength.h"
 #include "SVGNames.h"
+#include "SVGUnitTypes.h"
 #include <math.h>
 #include <wtf/MathExtras.h>
 #include <wtf/OwnPtr.h>
@@ -46,11 +47,12 @@ SVGMaskElement::SVGMaskElement(const QualifiedName& tagName, Document* doc)
     , SVGTests()
     , SVGLangSpace()
     , SVGExternalResourcesRequired()
+    , m_maskUnits(SVGUnitTypes::SVG_UNIT_TYPE_OBJECTBOUNDINGBOX)
+    , m_maskContentUnits(SVGUnitTypes::SVG_UNIT_TYPE_USERSPACEONUSE)
     , m_x(this, LengthModeWidth)
     , m_y(this, LengthModeHeight)
     , m_width(this, LengthModeWidth)
     , m_height(this, LengthModeHeight)
-    , m_dirty(true)
 {
     // Spec: If the attribute is not specified, the effect is as if a value of "-10%" were specified.
     setXBaseValue(SVGLength(this, LengthModeWidth, "-10%"));
@@ -65,6 +67,9 @@ SVGMaskElement::~SVGMaskElement()
 {
 }
 
+ANIMATED_PROPERTY_DEFINITIONS(SVGMaskElement, int, Enumeration, enumeration, MaskUnits, maskUnits, SVGNames::maskUnitsAttr.localName(), m_maskUnits)
+ANIMATED_PROPERTY_DEFINITIONS(SVGMaskElement, int, Enumeration, enumeration, MaskContentUnits, maskContentUnits, SVGNames::maskContentUnitsAttr.localName(), m_maskContentUnits)
+
 ANIMATED_PROPERTY_DEFINITIONS(SVGMaskElement, SVGLength, Length, length, X, x, SVGNames::xAttr.localName(), m_x)
 ANIMATED_PROPERTY_DEFINITIONS(SVGMaskElement, SVGLength, Length, length, Y, y, SVGNames::yAttr.localName(), m_y)
 ANIMATED_PROPERTY_DEFINITIONS(SVGMaskElement, SVGLength, Length, length, Width, width, SVGNames::widthAttr.localName(), m_width)
@@ -72,7 +77,17 @@ ANIMATED_PROPERTY_DEFINITIONS(SVGMaskElement, SVGLength, Length, length, Height,
 
 void SVGMaskElement::parseMappedAttribute(MappedAttribute* attr)
 {
-    if (attr->name() == SVGNames::xAttr)
+    if (attr->name() == SVGNames::maskUnitsAttr) {
+        if (attr->value() == "userSpaceOnUse")
+            setMaskUnitsBaseValue(SVGUnitTypes::SVG_UNIT_TYPE_USERSPACEONUSE);
+        else if (attr->value() == "objectBoundingBox")
+            setMaskUnitsBaseValue(SVGUnitTypes::SVG_UNIT_TYPE_OBJECTBOUNDINGBOX);
+    } else if (attr->name() == SVGNames::maskContentUnitsAttr) {
+        if (attr->value() == "userSpaceOnUse")
+            setMaskContentUnitsBaseValue(SVGUnitTypes::SVG_UNIT_TYPE_USERSPACEONUSE);
+        else if (attr->value() == "objectBoundingBox")
+            setMaskContentUnitsBaseValue(SVGUnitTypes::SVG_UNIT_TYPE_OBJECTBOUNDINGBOX);
+    } else if (attr->name() == SVGNames::xAttr)
         setXBaseValue(SVGLength(this, LengthModeWidth, attr->value()));
     else if (attr->name() == SVGNames::yAttr)
         setYBaseValue(SVGLength(this, LengthModeHeight, attr->value()));
@@ -93,23 +108,58 @@ void SVGMaskElement::parseMappedAttribute(MappedAttribute* attr)
     }
 }
 
-auto_ptr<ImageBuffer> SVGMaskElement::drawMaskerContent()
-{
-    IntSize size = IntSize(lroundf(width().value()), lroundf(height().value()));
+auto_ptr<ImageBuffer> SVGMaskElement::drawMaskerContent(const FloatRect& targetRect, FloatRect& maskDestRect) const
+{    
+    // Determine specified mask size
+    float xValue = x().valueAsPercentage();
+    float yValue = y().valueAsPercentage();
+    float widthValue = width().valueAsPercentage();
+    float heightValue = height().valueAsPercentage();
+    
+    if (maskUnits() == SVGUnitTypes::SVG_UNIT_TYPE_OBJECTBOUNDINGBOX) {
+        xValue *= targetRect.width();
+        yValue *= targetRect.height();
+        widthValue *= targetRect.width();
+        heightValue *= targetRect.height();
+    }
 
-    auto_ptr<ImageBuffer> maskImage = ImageBuffer::create(size, false);
+    auto_ptr<ImageBuffer> maskImage = ImageBuffer::create(IntSize(lroundf(widthValue), lroundf(heightValue)), false);
     if (!maskImage.get())
         return maskImage;
+    maskDestRect = FloatRect(xValue, yValue, widthValue, heightValue);
+    if (maskUnits() == SVGUnitTypes::SVG_UNIT_TYPE_OBJECTBOUNDINGBOX)
+        maskDestRect.move(targetRect.x(), targetRect.y());
 
     GraphicsContext* maskImageContext = maskImage->context();
     ASSERT(maskImageContext);
-
+    
     maskImageContext->save();
-    maskImageContext->translate(-x().value(), -y().value());
-
-    ImageBuffer::renderSubtreeToImage(maskImage.get(), renderer());
-
+    maskImageContext->translate(-xValue, -yValue);
+    
+    if (maskContentUnits() == SVGUnitTypes::SVG_UNIT_TYPE_OBJECTBOUNDINGBOX) {
+        maskImageContext->save();
+        maskImageContext->scale(FloatSize(targetRect.width(), targetRect.height()));
+    }
+    
+    // Render subtree into ImageBuffer
+    for (Node* n = firstChild(); n; n = n->nextSibling()) {
+        SVGElement* elem = svg_dynamic_cast(n);
+        if (!elem || !elem->isStyled())
+            continue;
+        
+        SVGStyledElement* e = static_cast<SVGStyledElement*>(elem);
+        RenderObject* item = e->renderer();
+        if (!item)
+            continue;
+        
+        ImageBuffer::renderSubtreeToImage(maskImage.get(), item);
+    }
+    
+    if (maskContentUnits() == SVGUnitTypes::SVG_UNIT_TYPE_OBJECTBOUNDINGBOX)
+        maskImageContext->restore();
+    
     maskImageContext->restore();
+
     return maskImage;
 }
  
@@ -122,14 +172,8 @@ RenderObject* SVGMaskElement::createRenderer(RenderArena* arena, RenderStyle*)
 
 SVGResource* SVGMaskElement::canvasResource()
 {
-    if (!m_masker) {
-        m_masker = new SVGResourceMasker();
-        m_dirty = true;
-    }
-    if (m_dirty) {
-        m_masker->setMask(drawMaskerContent());
-        m_dirty = !m_masker->mask();
-    }
+    if (!m_masker)
+        m_masker = new SVGResourceMasker(this);
     return m_masker.get();
 }
 
@@ -137,11 +181,7 @@ void SVGMaskElement::notifyAttributeChange() const
 {
     if (!attached() || ownerDocument()->parsing())
         return;
-
-    IntSize newSize = IntSize(lroundf(width().value()), lroundf(height().value()));
-    if (!m_masker || !m_masker->mask() || (m_masker->mask()->size() != newSize))
-        m_dirty = true;
-
+    
     if (m_masker) {
         m_masker->invalidate();
         m_masker->repaintClients();
